k8s/namespaces/backend/base/fan-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fan-api-svc
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
    appProtocol: kubernetes.io/h2c # HTTP/2 Cleartext
